--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -17,6 +17,8 @@
 	<uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+	<uses-feature android:name="android.hardware.camera" android:required="false" />
+	<uses-permission android:name="android.permission.CAMERA"></uses-permission>
 	<uses-feature
         android:glEsVersion="0x00020000"
         android:required="true"/>
